third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/binary_or.exp
module 0x8675309::M {
    struct R {
        f: bool,
    }
    fun t0(x: bool, r: R) {
        if (!x) ();
        if (!*&(&r).f) *&(&r).f;
        let R{f: _t7} = r;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `bool`
  ┌─ binary_or.move:7:9
  │
7 │         if (!*&(&r).f) *&(&r).f;
  │         ^^^^^^^^^^^^^^^^^^^^^^^
